[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {extras = ["voice"], version = "^2.4.0"}
yt-dlp = "^2024.12.3"
requests = "^2.32.3"
openai = {extras = ["datalib"], version = "^1.84.0"}
aiohttp = "^3.11.10"
PyNaCl = "^1.5.0"
ffmpeg-python = "^0.2.0"
async-timeout = "^4.0.3"
pydub = "^0.25.1"
discord = {extras = ["voice"], version = "^2.3.2"}
gtts = "^2.5.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"